<resources>
    <string name="app_menu">Omni Menu</string>
    <string name="app_create">Create Account</string>
    <string name="app_list">Available Accounts</string>
    <string name="app_upload_list">Files to Upload</string>
    <string name="app_detail">Account Detail</string>
    <string name="app_name">Omni Channel</string>
    <string name="app_photo">Save Photo</string>
    <string name="app_signature">Save Signature</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Omni App Login</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="prompt_status">Status</string>
    <string name="prompt_documentType">Document Type</string>
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_idNumber">Id Number</string>
    <string name="prompt_cardNumber">Card Number</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_email">Email Address</string>

</resources>
